--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/rutikwankhade/themakersclub-backend#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "gravatar": "^1.8.2",
     "mongoose": "^6.0.5"
   },
   "devDependencies": {
